--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "electron": "^5.0.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0"
   }
 }
